Request and Event entities