@@ -7,7 +7,6 @@ import ru.practicum.main.Event.entity.Event;
 import ru.practicum.main.Event.entity.EventState;
 import ru.practicum.main.Event.repository.EventRepository;
 import ru.practicum.main.Exception.ConflictException;
-import ru.practicum.main.Exception.ForbiddenException;
 import ru.practicum.main.Exception.NotFoundException;
 import ru.practicum.main.Request.dto.EventRequestStatusUpdateRequest;
 import ru.practicum.main.Request.dto.EventRequestStatusUpdateResult;
@@ -16,9 +15,6 @@ import ru.practicum.main.Request.entity.ParticipationRequest;
 import ru.practicum.main.Request.entity.RequestStatus;
 import ru.practicum.main.Request.mapper.RequestMapper;
 import ru.practicum.main.Request.repository.ParticipationRequestRepository;
-import ru.practicum.main.User.Repository.UserRepository;
-import ru.practicum.main.User.dto.UserDto;
-import ru.practicum.main.User.mapper.UserMapper;
 import ru.practicum.main.User.service.UserService;
 
 import java.time.LocalDateTime;
@@ -26,6 +22,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,14 +31,13 @@ public class RequestServiceImpl implements RequestService {
 
     private final ParticipationRequestRepository requestRepository;
     private final EventRepository eventRepository;
-    private final UserRepository userRepository;
     private final UserService userService;
 
     // ----- user side -----
     @Override
     public List<ParticipationRequestDto> getUserRequests(Long userId) {
-        UserDto user = userService.getUserById(userId);
-        return requestRepository.findByRequesterId(user.getId()).stream()
+        userService.getUserById(userId);
+        return requestRepository.findByRequesterId(userId).stream()
                 .map(RequestMapper::toDto)
                 .toList();
     }
@@ -63,14 +59,13 @@ public class RequestServiceImpl implements RequestService {
         }
 
         long confirmed = requestRepository.countByEventIdAndStatus(eventId, RequestStatus.CONFIRMED);
-        if (event.getParticipantLimit() != null && event.getParticipantLimit() > 0
-                && confirmed >= event.getParticipantLimit()) {
+        int limit = Optional.ofNullable(event.getParticipantLimit()).orElse(0);
+        if (limit > 0 && confirmed >= limit) {
             throw new ConflictException("The participant limit has been reached");
         }
 
         RequestStatus status = RequestStatus.PENDING;
-        if ((event.getParticipantLimit() != null && event.getParticipantLimit() == 0)
-                || Boolean.FALSE.equals(event.getRequestModeration())) {
+        if (limit == 0 || Boolean.FALSE.equals(event.getRequestModeration())) {
             status = RequestStatus.CONFIRMED;
         }
 
@@ -91,11 +86,6 @@ public class RequestServiceImpl implements RequestService {
         ParticipationRequest r = requestRepository.findByIdAndRequesterId(requestId, userId)
                 .orElseThrow(() -> new NotFoundException("Request with id=" + requestId + " was not found"));
 
-        UserDto user = UserMapper.toUserDto(userService.getEntityById(r.getRequesterId()));
-        if (user.getId() != userId) {
-            throw new IllegalStateException("You can't cancel request of another user");
-        }
-
         r.setStatus(RequestStatus.CANCELED);
         return RequestMapper.toDto(requestRepository.save(r));
     }
@@ -103,8 +93,7 @@ public class RequestServiceImpl implements RequestService {
     // ----- event owner side -----
     @Override
     public List<ParticipationRequestDto> getEventRequestsByUserId(Long userId, Long eventId) {
-        UserDto u = userService.getUserById(userId);
-        Event e = mustBeOwner(u.getId(), eventId);
+        Event e = mustBeOwner(userId, eventId);
         return requestRepository.findByEventId(e.getId()).stream()
                 .map(RequestMapper::toDto)
                 .toList();
@@ -112,21 +101,24 @@ public class RequestServiceImpl implements RequestService {
 
     @Override
     @Transactional
-    public EventRequestStatusUpdateResult changeRequestStatus(Long userId, Long eventId,
+    public EventRequestStatusUpdateResult changeRequestStatus(Long userId,
+                                                              Long eventId,
                                                               EventRequestStatusUpdateRequest body) {
-        UserDto u = userService.getUserById(userId);
-        Event e = mustBeOwner(u.getId(), eventId);
-        if (!e.getInitiatorId().equals(u.getId()))
-            throw new ForbiddenException(
-                    "User with id = " + userId + " is not a initiator of event with id = " + eventId);
+        Event e = mustBeOwner(userId, eventId);
 
-        if (body.getRequestIds() == null || body.getRequestIds().isEmpty()) {
+        List<Long> ids = body.getRequestIds();
+        if (ids == null || ids.isEmpty()) {
+            return new EventRequestStatusUpdateResult(List.of(), List.of());
+        }
+
+        int limit = Optional.ofNullable(e.getParticipantLimit()).orElse(0);
+        if (limit == 0 || Boolean.FALSE.equals(e.getRequestModeration())) {
             return new EventRequestStatusUpdateResult(List.of(), List.of());
         }
 
         RequestStatus target;
         try {
-            target = RequestStatus.valueOf(body.getStatus());
+            target = RequestStatus.valueOf(String.valueOf(body.getStatus()));
         } catch (Exception ex) {
             throw new ConflictException("Unknown status: " + body.getStatus());
         }
@@ -134,43 +126,49 @@ public class RequestServiceImpl implements RequestService {
             throw new ConflictException("Unknown status: " + body.getStatus());
         }
 
-        List<ParticipationRequest> requests = requestRepository.findByIdInAndEventId(body.getRequestIds(), eventId);
-        if (requests.size() != body.getRequestIds().size()
-                || requests.stream().anyMatch(r -> r.getStatus() != RequestStatus.PENDING)) {
+        List<ParticipationRequest> reqs =
+                requestRepository.findByIdInAndEventId(ids, eventId);
+
+        if (reqs.size() != ids.size()
+                || reqs.stream().anyMatch(r -> r.getStatus() != RequestStatus.PENDING)) {
             throw new ConflictException("Request must have status PENDING");
         }
 
-        long confirmed = requestRepository.countByEventIdAndStatus(eventId, RequestStatus.CONFIRMED);
-        int limit = Optional.ofNullable(e.getParticipantLimit()).orElse(0);
+        long alreadyConfirmed = requestRepository.countByEventIdAndStatus(eventId, RequestStatus.CONFIRMED);
 
-        List<ParticipationRequest> confirmedList = new ArrayList<>();
-        List<ParticipationRequest> rejectedList  = new ArrayList<>();
+        List<ParticipationRequest> toConfirm = new ArrayList<>();
+        List<ParticipationRequest> toReject  = new ArrayList<>();
 
         if (target == RequestStatus.CONFIRMED) {
-            for (ParticipationRequest r : requests) {
-                if (limit > 0 && confirmed >= limit) {
-                    throw new ConflictException("The participant limit has been reached");
-                }
-                r.setStatus(RequestStatus.CONFIRMED);
-                confirmed++;
-                confirmedList.add(r);
+            int slots = Math.max(0, limit - (int) alreadyConfirmed);
+            if (slots == 0) {
+                throw new ConflictException("The participant limit has been reached");
             }
 
-            if (limit > 0 && confirmed >= limit) {
+            for (int i = 0; i < reqs.size(); i++) {
+                ParticipationRequest r = reqs.get(i);
+                if (i < slots) {
+                    r.setStatus(RequestStatus.CONFIRMED);
+                    toConfirm.add(r);
+                } else {
+                    r.setStatus(RequestStatus.REJECTED);
+                    toReject.add(r);
+                }
+            }
+            requestRepository.saveAll(reqs);
+
+            if (alreadyConfirmed + toConfirm.size() >= limit) {
                 requestRepository.rejectAllPendingForEvent(eventId, RequestStatus.REJECTED);
             }
         } else {
-            for (ParticipationRequest r : requests) {
-                r.setStatus(RequestStatus.REJECTED);
-                rejectedList.add(r);
-            }
+            reqs.forEach(r -> r.setStatus(RequestStatus.REJECTED));
+            requestRepository.saveAll(reqs);
+            toReject.addAll(reqs);
         }
 
-        requestRepository.saveAll(requests);
-
         return EventRequestStatusUpdateResult.builder()
-                .confirmedRequests(confirmedList.stream().map(RequestMapper::toDto).toList())
-                .rejectedRequests(rejectedList.stream().map(RequestMapper::toDto).toList())
+                .confirmedRequests(toConfirm.stream().map(RequestMapper::toDto).collect(Collectors.toList()))
+                .rejectedRequests(toReject.stream().map(RequestMapper::toDto).collect(Collectors.toList()))
                 .build();
     }
 
@@ -183,4 +181,3 @@ public class RequestServiceImpl implements RequestService {
         return e;
     }
 }
-
